--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+/* src/App.css */
+
+body {
+  background-color: #222;
+  color: #fff;
+  font-family: Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
-  flex-direction: column;
+}
+
+.sidebar a {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.sidebar a:hover {
+  text-decoration: underline;
+}
+
+.content {
+  background-color: #333;
+  flex-grow: 1;
+  padding: 20px;
+}
+
+/* Film card styles */
+.film-card {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #444;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.film-card img {
+  width: 80px;
+  height: auto;
+  margin-right: 10px;
+  border-radius: 3px;
+}
+
+/* Top100, FilmSearch, and RandomFilm heading */
+h1 {
+  margin-bottom: 20px;
+}
+
+/* FilmSearch form styles */
+form {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+form input {
+  flex-grow: 1;
+  margin-right: 10px;
+  padding: 5px;
+}
+
+form button {
+  padding: 5px 10px;
+}
+
+/* src/App.css */
+
+.random-film-button {
+  background-color: #4caf50;
+  border: none;
   color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.random-film-button:hover {
+  background-color: #45a049;
 }
